--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,7 +15,7 @@
 } */
 
 body {
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
 }
 
 main {
@@ -38,15 +38,21 @@ main {
 }
 
 .list-item {
-  margin: 25px 0;
+  margin: 20px 0;
 }
 
 .link {
-  font-size: 25px;
+  font-size: 1.25rem;
   text-transform: uppercase;
   letter-spacing: 12px;
   color: white;
   text-decoration: none;
+}
+
+@media only screen and (max-width: 800px) {
+  .link {
+    font-size: 1.1rem;
+  }
 }
 
 .link:hover {
