--- a/src/components/linklist.css
+++ b/src/components/linklist.css
@@ -1,12 +1,9 @@
 .link-list-container {
-  position: absolute;
-  bottom: 0;
   width: 70%;
 }
 
 .link-list {
   list-style: none;
-  margin-left: 0;
   text-align: center;
 }
 
@@ -23,7 +20,7 @@
 }
 
 .link {
-  font-size: 1.25rem;
+  font-size: 25px;
   text-transform: uppercase;
   letter-spacing: 12px;
   color: white;
@@ -32,7 +29,7 @@
 
 @media only screen and (max-width: 800px) {
   .link {
-    font-size: 1.1rem;
+    font-size: 22px;
   }
 }
 
