--- a/src/pages/watch.css
+++ b/src/pages/watch.css
@@ -3,7 +3,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 90%;
+  height: 80%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
 @media only screen and (max-width: 800px) {
