--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -22,14 +22,16 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width: 750px) {
-  .about-text {
-    width: 80%;
-    text-align: center;
-    margin-top: 0;
-  }
+.about {
+  @media only screen and (max-width: 750px) {
+    .about-text {
+      width: 80%;
+      text-align: center;
+      margin-top: 0;
+    }
 
-  .link-list-container {
-    display: none;
+    .link-list-container {
+      display: none;
+    }
   }
 }
