--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -22,7 +22,6 @@
 
 @media only screen and (min-width: 800px) and (max-height: 1000px) {
   #album-cover {
-    width: 70%;
-    height: 80vh;
+    max-height: 80vh;
   }
 }
