--- a/src/components/link.scss
+++ b/src/components/link.scss
@@ -2,7 +2,7 @@
   font-size: 25px;
   text-transform: uppercase;
   letter-spacing: 12px;
-  color: white;
+  color: #f9b4dd;
   text-decoration: none;
 }
 
