--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,10 +1,10 @@
 .about-text {
-  color: white;
   margin: 50px 0;
   width: 60%;
-  font-size: 20px;
+  font-size: 22px;
   text-align: justify;
   line-height: 50px;
+  color: #f9b4dd;
 }
 
 @media only screen and (max-height: 800px) {
