--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -7,11 +7,11 @@
   src: url('../fonts/Futura\ Italic.ttf')
 }
 
-@media only screen and (min-height: 800px) {
-  #album-cover {
-    height: 60vh;
-  }
-}
+// @media only screen and (min-height: 800px) {
+//   #album-cover {
+//     height: 60vh;
+//   }
+// }
 
 @media only screen and (max-height: 700px) {
   #album-cover {
@@ -28,5 +28,19 @@
 @media only screen and (min-width: 800px) and (max-height: 1000px) {
   #album-cover {
     max-height: 80vh;
+  }
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+
+  .link-list-container { 
+    position: relative;
+
+    @media screen and (max-width: 450px) {
+      margin-top: 50px;
+    }
   }
 }
