--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -7,7 +7,7 @@ main {
 }
 
 html {
-  font-family: "Futura italic", sans-serif !important;
+  font-family: "BlackJaguarDemoRegular", sans-serif !important;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
