--- a/src/components/linklist.scss
+++ b/src/components/linklist.scss
@@ -1,25 +1,9 @@
-.link-list-container {
-  position: absolute;
-  bottom: 0;
-}
-
 @media only screen and (min-width: 800px) {
   .link-list-container {
-    width: 90%;
+    margin-top: 10px;
   }
 }
 
-@media only screen and (min-width: 1000px) {
-  .link-list-container {
-    width: 80%;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .link-list-container {
-    width: 70%;
-  }
-}
 
 .link-list {
   list-style: none;
@@ -29,11 +13,8 @@
 @media only screen and (min-width: 800px) {
   .link-list {
     display: flex;
+    gap: 25px;
     justify-content: space-between;
-    margin-left: 12px;
   }
 }
 
-.list-item {
-  margin: 13px 0;
-}
