--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,15 +1,16 @@
 .about-text {
   margin: 50px 0;
   width: 60%;
-  font-size: 22px;
+  font-size: 20px;
   text-align: justify;
   line-height: 50px;
-  color: #f9b4dd;
+  color: #CC1100;
+  font-family: "Zapfino", sans-serif !important;
 }
 
 @media only screen and (max-height: 800px) {
   .about-text {
-    line-height: 30px;
+    line-height: 50px;
   }
 }
 
